# LLM-Gate

./: AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: zh-hant.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  events.rs  lib.rs  proxy.rs
src/assets/: main.css
src/components/common/: EditableField.vue  GlobalErrorDialog.vue  UpdateDialog.vue
src/components/dashboard/: ModelConnectionCard.vue  ServiceStatusCard.vue  StatusDot.vue
src/components/models/: ModelCard.vue  ModelDeleteDialog.vue
src/components/settings/: SettingsItem.vue
src/components/ui/input-group/: InputGroup.vue
src/components/ui/select/: SelectTrigger.vue
src/components/ui/sidebar/: Sidebar.vue  utils.ts
src/i18n/: config.ts  en.json  zh-hant.json  zh.json
src/layout/: SidebarLayout.vue
src/router/: index.ts
src/stores/: error.ts  models.ts  proxy.ts  settings.ts  update.ts
src/utils/: app-data.ts  log.ts  proxy.ts  tray.ts  url.ts  window.ts
src/views/: Home.vue  HomeView.vue  ModelsView.vue  Settings.vue  SettingsView.vue
