[package]
name = "llm-gate"
version = "0.1.0"
description = "A lightweight local AI gateway that securely proxies LLM API requests with automatic key injection and CORS support."
authors = ["xuanzhi33 <xuanzhi33@qq.com>"]
homepage = "https://github.com/xuanzhi33/LLM-Gate"
license = "AGPL-3.0-only"
repository = "https://github.com/xuanzhi33/LLM-Gate"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
